fixes
1) make insar time slider window be a window on top of the highcharts insar plot window, with the insar plot being invisible. when select a point, now make the full plot window visible and the slider only invisible.
2) make insar mini slider have a flat straight line and not a y=x line in the mini map.
3) add yunyun name to about page
4) add title of "Date" to insar mini slider

--- a/public/css/mainPage.css
+++ b/public/css/mainPage.css
@@ -848,6 +848,24 @@ input[type=number] {
     width: 40%;
 }
 
+#charts.only-show-slider {
+    height: 10%;
+    min-height: 50px;
+}
+
+#charts.active > #insar-chart-slider-container {
+    display: none !important;
+}
+
+#charts.active.only-show-slider > #insar-chart-slider-container {
+    display: block !important;
+    height: 100%;
+}
+
+#charts.active.only-show-slider > .content {
+    display: none;
+}
+
 #seismicity-charts {
     position: absolute;
     right: 0%;
@@ -871,9 +889,9 @@ input[type=number] {
 #seismicity-chart-sliders, #insar-chart-slider-container {
     position: absolute;
     left: 10%;
-    width: 30%;
+    width: 75%;
     bottom: 0%;
-    height: 210px;
+    height: 135px;
 }
 
 .chart-slider {
